Updated Jenkinsfile